--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="images/profilo-circle.png" alt="immagine profilo Salvatore Maiorana">
+    <img src="profilo-circle.png" alt="immagine profilo Salvatore Maiorana">
     <h1>Salvatore Maiorana</h1>
     <p><em>Ormai da decenni morto di fame 💀, perennemente senza un💲e senza lavoro 😖</em></p>
     <p><em>Studio sicurezza informatica presso <strong><a href="https://visioneacademy.com/#home">Visione
@@ -27,7 +27,7 @@
         <li><a
                 href="https://normanno.com/attualita/messina-il-mercato-ex-mandalari-aperto-fino-a-sera-in-vista-del-natale-2022-giorni-e-orari/">passeggiata
                 al mercato</a> </li>
-        <li><a href="images/caruso fiera lipari.jpg">passeggiata con alberto a perdere tempo e soldi con la nims</a>
+        <li><a href="caruso fiera lipari.jpg">passeggiata con alberto a perdere tempo e soldi con la nims</a>
         </li>
         <li>dovevo mettere altri punti elenco quindi simulo altre cose interessanti scrivendo questo lunghissimo testo
             inutile</li>
